--- a/dockers/release-lts/Dockerfile
+++ b/dockers/release-lts/Dockerfile
@@ -1,5 +1,3 @@
-# Copyright The PyTorch Lightning team.
-#
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -12,11 +10,27 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+ARG PYTHON_VERSION=3.9
+ARG PYTORCH_VERSION=1.8
+
 FROM base-cuda-py3.9-pt1.8-pl1.6
 
 LABEL maintainer="Dan Dale <https://github.com/speediedan>"
 
-RUN useradd -c 'azpl_init user' -d /home/azpl_init -m -k /etc/skel -s /bin/bash -ou 0 -g 0 azpl_init
+WORKDIR /home/finetuning-scheduler
+COPY ./tests ./tests
+COPY ./requirements ./requirements
+COPY ./fts_examples ./fts_examples
+COPY ./finetuning_scheduler ./finetuning_scheduler
+COPY ./requirements.txt ./setup.py ./setup.cfg ./pyproject.toml ./README.md ./
 
-COPY dockers/fts-az-base/.bashrc /home/azpl_init/.bashrc
-USER azpl_init
+# install dependencies
+RUN \
+    pip install ".[all]" --no-cache-dir && \
+    rm -rf requirements.* requirements/
+
+RUN python --version && \
+    pip --version && \
+    pip list && \
+    python -c "import pytorch_lightning as pl; print(pl.__version__)" && \
+    python -c "import finetuning_scheduler as fts; print(fts.__version__)"
