--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 git+https://github.com/PyTorchLightning/pytorch-lightning.git@f5304897cec970bb1cfaef901bbe12532242f1e3
-torch==1.8.1
+torch>=1.7.*
+setuptools < 59.6.0
