--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -25,13 +25,13 @@ jobs:
         # will be needed multiple versions of pytorch-lightning are supported
         requires: ["oldest", "latest"]
         release: ["latest"]
-        exclude:
-          - {os: ubuntu-20.04, requires: "oldest"}
-          - {os: windows-2019, requires: "oldest"}
-          - {os: macOS-10.15, python-version: "3.9", requires: "oldest"}
+        # exclude:
+          # - {os: ubuntu-20.04, python-version: "3.9", requires: "oldest"}
+          # - {os: windows-2019, requires: "oldest"}
+          # - {os: macOS-10.15, python-version: "3.9", requires: "oldest"}
         # include:
         #   # adding when using a release candidate
-        #   # - {os: ubuntu-20.04, python-version: "3.9", requires: "latest", release: "pre"}
+        #   # - {os: ubuntu-20.04, python-version: "3.10", requires: "latest", release: "pre"}
 
     timeout-minutes: 40
 
@@ -42,21 +42,18 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - name: Weekly reset caching
-      run: echo "::set-output name=period::$(python -c 'import time ; days = time.time() / 60 / 60 / 24 ; print(int(days / 7))' 2>&1)"
-      id: times
+    - name: Reset caching
+      run: python -c "import time; days = time.time() / 60 / 60 / 24; print(f'TIME_PERIOD=d{int(days / 2) * 2}')" >> $GITHUB_ENV
 
-    - name: Upgrade pip
+    - name: basic setup
       run: |
-        python --version
-        # needed for `pip cache` command
-        pip install --upgrade pip --user
         pip --version
+        pip install -q fire
 
     - name: Set min. dependencies
       if: matrix.requires == 'oldest'
       run: |
-        python .github/set-min-requirements.py
+        python .actions/assistant.py replace_oldest_ver
 
     # Note: This uses an internal pip API and may not always work
     # https://github.com/actions/cache/blob/master/examples.md#multiple-oss-in-a-workflow
@@ -68,9 +65,10 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ${{ steps.pip-cache.outputs.dir }}
-        key: ${{ runner.os }}-pip-td${{ steps.times.outputs.period }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-${{ hashFiles('requirements.txt') }}-${{ hashFiles('requirements/extra.txt') }}
+        key: ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-${{ hashFiles('requirements.txt') }}-${{ hashFiles('requirements/extra.txt') }}
         restore-keys: |
-          ${{ runner.os }}-pip-td${{ steps.times.outputs.period }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
+          ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
+
 
     # - name: Pull checkpoints from S3
     #   working-directory: ./legacy
@@ -89,6 +87,18 @@ jobs:
         pip install --requirement requirements/test.txt --upgrade
         pip list
       shell: bash
+
+    # - name: Install dependencies
+    #   run: |
+    #     flag=$(python -c "print('--pre' if '${{matrix.release}}' == 'pre' else '')" 2>&1)
+    #     url=$(python -c "print('test/cpu/torch_test.html' if '${{matrix.release}}' == 'pre' else 'cpu/torch_stable.html')" 2>&1)
+    #     pip install --requirement requirements.txt --upgrade $flag --find-links "https://download.pytorch.org/whl/${url}"
+    #     # adjust versions according installed Torch version
+    #     python ./requirements/adjust-versions.py requirements/examples.txt
+    #     pip install --requirement requirements/examples.txt --find-links https://download.pytorch.org/whl/cpu/torch_stable.html --upgrade
+    #     pip install --requirement requirements/test.txt --upgrade
+    #     pip list
+    #   shell: bash
 
     - name: Cache datasets
       uses: actions/cache@v2
