--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -17,7 +17,7 @@ ARG OS_VER=ubuntu20.04
 FROM nvidia/cuda:${CUDA_VERSION}-devel-${OS_VER}
 
 ARG PYTHON_VERSION=3.9
-ARG PYTORCH_VERSION=1.10
+ARG PYTORCH_VERSION=1.11
 ARG CUST_BUILD=0
 ARG MKL_THREADING_LAYER=GNU
 
@@ -29,10 +29,9 @@ ENV \
     TZ=US/Pacific \
     PATH="$PATH:/root/.local/bin" \
     CUDA_TOOLKIT_ROOT_DIR="/usr/local/cuda" \
-    TORCH_CUDA_ARCH_LIST="3.7;5.0;6.0;7.0;7.5" \
+    TORCH_CUDA_ARCH_LIST="3.7;5.0;6.0;7.0;7.5;8.0" \
     MKL_THREADING_LAYER=${MKL_THREADING_LAYER} \
-    MAKEFLAGS="-j$(nproc)"
-    # MAKEFLAGS="-j1"
+    MAKEFLAGS="-j2"
 
 RUN apt-get update -qq --fix-missing  && \
     apt-get install -y --no-install-recommends \
@@ -73,14 +72,15 @@ RUN \
     rm get-pip.py && \
     # Disable cache
     pip config set global.cache-dir false && \
-    # set particular PyTorch version
+    # set particular PyTorch version by default
     if [[ "${CUST_BUILD}" -eq 0 ]]; then \
         python ./requirements/pl_adjust_versions.py requirements.txt ${PYTORCH_VERSION}; \
         python ./requirements/pl_adjust_versions.py requirements/extra.txt ${PYTORCH_VERSION}; \
         python ./requirements/pl_adjust_versions.py requirements/examples.txt ${PYTORCH_VERSION}; \
     else \
-        # target specific pytorch cuda build
-        pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
+        # or target a specific cuda build of latest stable packages
+        # pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
+        pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu113; \
     fi && \
     # Install all requirements
     pip install -r requirements/devel.txt --no-cache-dir && \
@@ -92,7 +92,7 @@ RUN \
 
 RUN \
     # install FairScale
-    pip install fairscale==0.4.0 && \
+    pip install fairscale==0.4.5 && \
     python -c "import fairscale; print(fairscale.__version__)"
 
 # RUN \ # removing deepspeed from extras unless/until add optimizer pg interface added to DS API
