--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-#git+https://github.com/PyTorchLightning/pytorch-lightning.git@f5304897cec970bb1cfaef901bbe12532242f1e3
-#git+https://github.com/PyTorchLightning/pytorch-lightning.git@1.6.0rc0
-pytorch-lightning>=1.6.0rc1
+pytorch-lightning>=1.6.0
 torch>=1.8.*
 # setuptools version constraint can be removed once torch >= 1.11 is required
 setuptools < 59.6.0
