--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pytorch-lightning>=1.6.0
+pytorch-lightning==1.6.0
 torch>=1.8.*
 # setuptools version constraint can be removed once torch >= 1.11 is required
 setuptools < 59.6.0
