--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -22,7 +22,7 @@ jobs:
       matrix:
         os: [ubuntu-20.04, windows-2019, macOS-10.15]
         python-version: ["3.7", "3.9"]  # minimum, maximum
-        # will be needed multiple versions of pytorch-lightning are supported
+        # tests will include oldest and newest tested patch versions of pytorch-lightning
         requires: ["oldest", "latest"]
         release: ["latest"]
         # exclude:
