--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -80,8 +80,7 @@ jobs:
       # give time to verify that the release looks good on github before proceeding with pypi
       uses: juliangruber/sleep-action@v1
       with:
-        time: 1m  # just testing for now
-        #time: 10m
+        time: 5m
 
     - name: Publish to Test PyPI
       uses: pypa/gh-action-pypi-publish@v1.5.0
@@ -91,8 +90,8 @@ jobs:
         repository_url: https://test.pypi.org/legacy/
         verbose: true
 
-    # - name: Publish distribution 📦 to PyPI
-    #   uses: pypa/gh-action-pypi-publish@v1.5.0
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.pypi_password }}
+    - name: Publish distribution 📦 to PyPI
+      uses: pypa/gh-action-pypi-publish@v1.5.0
+      with:
+        user: __token__
+        password: ${{ secrets.pypi_password }}
