--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -4,9 +4,9 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/python
 
 trigger:
-  tags:
-    include:
-      - '*'
+  # tags:
+  #   include:
+  #     - '*'
   branches:
     include:
       - "main"
