--- a/.github/workflows/release-pypi.yml
+++ b/.github/workflows/release-pypi.yml
@@ -82,14 +82,13 @@ jobs:
       with:
         time: 5m
 
-    # temporarily bypassing testpypi since we previously tested/validate 0.1.1 and can't again
-    # - name: Publish to Test PyPI
-    #   uses: pypa/gh-action-pypi-publish@v1.5.0
-    #   with:
-    #     user: __token__
-    #     password: ${{ secrets.test_pypi_password }}
-    #     repository_url: https://test.pypi.org/legacy/
-    #     verbose: true
+    - name: Publish to Test PyPI
+      uses: pypa/gh-action-pypi-publish@v1.5.0
+      with:
+        user: __token__
+        password: ${{ secrets.test_pypi_password }}
+        repository_url: https://test.pypi.org/legacy/
+        verbose: true
 
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@v1.5.0
