update azure pipeline PR config

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -13,8 +13,10 @@ trigger:
       - "release/*"
       - "refs/tags/*"
 pr:
-  - "main"
-  - "release/*"
+  branches:
+    include:
+    - main
+    - release/*
 
 jobs:
   - job: pytest
