--- a/setup.cfg
+++ b/setup.cfg
@@ -56,3 +56,5 @@ ignore =
     E731  # Ignore "Do not assign a lambda expression, use a def"
     W503  # Ignore "Line break occurred before a binary operator"
     E203  # Ignore "whitespace before ':'"
+per-file-ignores =
+    fts_examples/ipynb_src/fts_superglue_nb.py:E501,F401,F821
