--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pytorch-lightning>=1.6.0,<=1.6.3
+#pytorch-lightning>=1.6.0,<=1.6.3
+# currently working off of pl dev master
+git+https://github.com/PyTorchLightning/pytorch-lightning.git@9ac5cca8427f87f97afb08d5187966ccd401c9ae#egg=pytorch-lightning
 torch>=1.8.*
 # setuptools version constraint can be removed once torch >= 1.11 is required
 setuptools < 59.6.0
