--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ addopts =
     --doctest-modules
     --color=yes
     --disable-pytest-warnings
+    --ignore-glob='fts_examples/ipynb_src/*.py'
 filterwarnings =
     # error out on PL deprecation warnings - ensures the code and tests are kept up-to-date
     error::pytorch_lightning.utilities.warnings.LightningDeprecationWarning
