update adjust_versions supported pt dict, comment out old pt 1.8 test

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -22,8 +22,8 @@ jobs:
   - job: pytest
     strategy:
       matrix:
-        'PyTorch - LTS':
-          image: "speediedan/finetuning-scheduler:py3.9-pt1.8-azpl-init"
+        # 'PyTorch - LTS':
+        #   image: "speediedan/finetuning-scheduler:py3.9-pt1.8-azpl-init"
         'PyTorch - stable':
           image: "speediedan/finetuning-scheduler:py3.9-pt1.11-azpl-init"
     # how long to run the job before automatically cancelling
