--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,5 +7,5 @@
 # review when someone opens a pull request.
 * @speediedan
 
-# Core Finetuning Scheduler
+# Core Fine-Tuning Scheduler
 *.* @speediedan
