move core requirements.txt to requirements/base.txt and update load_requirements and setup to reference lightning meta package

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -48,5 +48,5 @@ build:
 # Optionally set the version of Python and requirements required to build your docs
 python:
   install:
-    - requirements: requirements.txt
+    - requirements: requirements/base.txt
     - requirements: requirements/docs.txt
