--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,1 @@
-#pytorch-lightning>=1.6.0,<=1.6.3
-# currently working off of pl dev master
-git+https://github.com/Lightning-AI/lightning.git@887dc0ff8cb05bf141e6f7e967d6a595c948943a#egg=pytorch-lightning
-torch>=1.9.*
+-r ./requirements/base.txt
