update pyproject.toml with jupytext metadata bypass configuration for nb test cleanup

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,10 @@ exclude = ['tests/.*']
 # mypy | tr ':' ' ' |  awk '{print $1}' | sort | uniq | sed 's/\.py//g' | sed 's|\/|\.|g' | xargs -I {} echo '"{}",'
 # module = []
 # ignore_errors = "True"
+
+[tool.jupytext]
+notebook_metadata_filter = "-all"
+
+[tool.jupytext.formats]
+"notebooks/" = "ipynb"
+"scripts/" = "py"
