--- a/dockers/release-conda/Dockerfile
+++ b/dockers/release-conda/Dockerfile
@@ -10,15 +10,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-ARG CUDA_VERSION=11.1
+ARG CUDA_VERSION=11.6
 
 FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu20.04
 
-# prefer 11.3 toolkit due to bug but allow 11.1 runtime
-ARG CUDATOOLKIT_VERSION=11.3
+ARG CUDATOOLKIT_VERSION=11.6
 ARG PYTHON_VERSION=3.9
-ARG PYTORCH_VERSION=1.11
-ARG CONDA_VERSION=4.12.0
+ARG PYTORCH_VERSION=1.12
+ARG CONDA_VERSION=4.13.0
 
 SHELL ["/bin/bash", "-c"]
 ENV \
@@ -50,7 +49,7 @@ ENV \
     # LD_LIBRARY_PATH="/root/miniconda3/lib:$LD_LIBRARY_PATH" \
     CUDA_TOOLKIT_ROOT_DIR="/usr/local/cuda" \
     MAKEFLAGS="-j2" \
-    TORCH_CUDA_ARCH_LIST="3.7;5.0;6.0;7.0;7.5;8.0" \
+    TORCH_CUDA_ARCH_LIST="6.0;7.0;7.5;8.0;8.6" \
     CONDA_ENV=finetuning-scheduler \
     CONDA_DEFAULT_ENV=${CONDA_ENV}
 
