update multi-gpu azpl env config, minor ci_test_full config update, azpl dockerfile config update, update to test log calls for multi-gpu testing

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -42,9 +42,10 @@ jobs:
       clean: outputs
 
     steps:
+
     - bash: |
         pip install --upgrade pip requests
-        pip install . --requirement requirements/devel.txt
+        pip install . --no-warn-script-location --requirement requirements/devel.txt
       displayName: 'Install dependencies'
 
     - bash: |
