--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -37,6 +37,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -69,10 +70,12 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-td${{ env.TIME_PERIOD }}-py${{ matrix.python-version }}-${{ matrix.release }}-${{ matrix.requires }}-
 
-    - name: Install dependencies
+    - name: Install extra dependencies
+      # env:
+      #   PACKAGE_NAME: pytorch
+      #   FREEZE_REQUIREMENTS: 1
       run: |
-        # flag=$(python -c "print('--pre' if '${{matrix.release}}' == 'pre' else '')" 2>&1)
-        pip install --requirement requirements/base.txt --upgrade $flag
+        pip install --requirement requirements/base.txt --upgrade
         pip install --requirement requirements/examples.txt --upgrade
         pip install --requirement requirements/test.txt --upgrade
         pip list
