--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@
 # limitations under the License.
 
 [tool:pytest]
+pythonpath = tests
 norecursedirs =
     .git
     .github
@@ -22,11 +23,11 @@ addopts =
     --doctest-modules
     --color=yes
     --disable-pytest-warnings
-    --ignore-glob='fts_examples/ipynb_src/*.py'
-filterwarnings =
+    --ignore-glob='src/fts_examples/ipynb_src/*.py'
+# filterwarnings =
     # error out on PL deprecation warnings - ensures the code and tests are kept up-to-date
-    error::pytorch_lightning.utilities.warnings.LightningDeprecationWarning
-    error::FutureWarning
+    # error::pytorch_lightning.utilities.warnings.LightningDeprecationWarning
+    # error::FutureWarning
 
 junit_duration_report = call
 
@@ -58,4 +59,4 @@ ignore =
     W503  # Ignore "Line break occurred before a binary operator"
     E203  # Ignore "whitespace before ':'"
 per-file-ignores =
-    fts_examples/ipynb_src/fts_superglue_nb.py:E501,F401,F821
+    src/fts_examples/ipynb_src/fts_superglue_nb.py:E501,F401,F821
