--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 # Exclude commonly generated files
 recursive-exclude __pycache__  *.py[cod] *.orig lightning_logs
+# prune testing-only ipynb_src dir
+prune src/fts_examples/ipynb_src
 # Include the README and CHANGELOG
 include *.md
 # Include the license file
