--- a/dockers/base-cuda/Dockerfile
+++ b/dockers/base-cuda/Dockerfile
@@ -81,7 +81,7 @@ RUN \
     else \
         # or target a specific cuda build of latest stable packages
         # pip install torch==1.10.2+cu113 torchvision==0.11.3+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html; \
-        pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu116; \
+        pip install torch torchvision torchtext --extra-index-url https://download.pytorch.org/whl/cu116; \
     fi && \
     # Install all requirements
     pip install -r requirements/devel.txt --no-cache-dir && \
