add support for ZeroRedundancyOptimizer, minor test refactoring including avoiding `CUDA_MODULE_LOADING` env leakage

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -58,7 +58,7 @@ jobs:
     #   displayName: 'Testing: standard'
 
     - bash: |
-        bash ./tests/standalone_tests.sh -k test_fts_multi_
+        bash ./tests/standalone_tests.sh -k test_fts_
       displayName: 'Testing: standalone multi-gpu'
 
     - bash: |
