--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ warn_redundant_casts = "True"
 warn_unused_configs = "True"
 warn_unused_ignores = "False"
 allow_redefinition = "True"
+# disable this rule as the PL Trainer attributes are defined in the connectors, not in its __init__
+disable_error_code = "attr-defined"
 # style choices
 warn_no_return = "False"
 exclude = ['tests/.*']
