configure environmental var to support dev builds based upon pytorch-lightning dev package mirror where necessary

--- a/.azure-pipelines/gpu-tests.yml
+++ b/.azure-pipelines/gpu-tests.yml
@@ -68,6 +68,8 @@ jobs:
     - bash: |
         pip install --upgrade pip requests
         pip install -e . --no-warn-script-location --requirement requirements/devel.txt
+      env:
+        PACKAGE_NAME: "pytorch"
       displayName: 'Install dependencies'
 
     - bash: |
